<!--
  ~
  ~  Copyright (c) 2020 jeffnyauke@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">COVID-19 Stats</string>
    <string name="app_name_brief">COVID-19 Stats</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="default_notification_channel_id">default</string>
    <string name="text_confirmed_cases">Confirmed Cases : %s</string>
    <string name="text_last_updated">Last Updated : %s</string>
    <string name="default_notification_channel_name">Covid-19 Stats</string>
    <string name="worldwide_charts">Worldwide Charts</string>
    <string name="title_global">Global</string>
    <string name="title_country">Country Stats</string>
    <string name="title_news">News</string>
    <string name="chart_combined">Trends</string>
    <string name="chart_confirmed">Confirmed</string>
    <string name="chart_deaths">Deaths</string>
    <string name="chart_recovered">Recovered</string>
    <string name="extended_fab_filter">Filter</string>
    <string name="title_sort">Sort</string>
    <string name="title_search">Search</string>
    <string name="search_hint">"Search country by name or ISO i.e. KE or Kenya "</string>
    <string name="content_expand_question">Expand question</string>
    <string name="title_faqs">FAQs</string>

    <!--Settings-->
    <string name="title_settings">Settings</string>

    <string name="settings_category_user_data">User data</string>
    <string name="settings_analytics_title">Analytics</string>
    <string name="settings_analytics_description">The application automatically sends analytics reports. If you don\'t want them to be sent you can opt-out here.</string>
    <string name="settings_crash_reporting_title">Crash reporting</string>
    <string name="settings_crash_reporting_description">The application automatically sends crash reports. If you don\'t want them to be sent you can opt-out here.</string>

    <string name="settings_category_theme">Theme</string>
    <string name="settings_theme_title">Pick theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_default">Follow OS settings</string>
    <string name="settings_interval_half_hour">30 minutes</string>
    <string name="settings_interval_one_hour">1 hour</string>
    <string name="settings_interval_one_day">1 day</string>
    <string name="settings_interval_one_week">1 week</string>

    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_title">Push notifications</string>
    <string name="settings_notifications_description">We notify you about Covid-19 Cases. Once turned off, Covid-19 notifications from this app will not be displayed on the notification bar or lock screen.</string>
    <string name="settings_notifications_frequency_title">Frequency</string>
    <string name="settings_notifications_frequency_description">The application sends you Covid-19 updates at a certain interval. Click to specify the frequency</string>

    <string name="settings_category_about">About</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_privacy_policy_title">Privacy policy</string>
    <string name="settings_terms_title">Terms &amp; Conditions</string>
    <string name="settings_developer_title">Developer</string>
    <string name="settings_developer_description">Jeffrey Nyauke</string>
    <string name="settings_feedback_title">Send feedback</string>
    <string name="settings_feedback_description">Got any queries? We are happy to help!</string>
    <string name="settings_about_description">The Covid-19 Stats app is an Android application that aims at providing reliable statistics and news about the Covid-19 pandemic while fighting misinformation. We are grateful to the following sources: Worldometers.info and The World Health Organization"</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="button_world">World</string>
    <string name="button_who">W.H.O.</string>
    <string name="title_countries">Countries</string>
    <string name="title_news_updates">News Updates</string>
</resources>
