<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/title_sort"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_faqs"
        android:title="@string/title_faqs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/title_settings"
        app:showAsAction="never" />
</menu>