<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~  Copyright (c) 2020 jeffnyauke@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_global">

    <fragment
        android:id="@+id/navigation_global"
        android:name="dev.jeffnyauke.covid19stats.ui.global.GlobalFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_global">
        <action
            android:id="@+id/action_GlobalFragment_to_FaqsFragment"
            app:destination="@id/navigation_faqs" />
        <action
            android:id="@+id/action_GlobalFragment_to_SettingsFragment"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_country_details"
        android:name="dev.jeffnyauke.covid19stats.ui.countries.CountryDetailsFragment"
        tools:layout="@layout/fragment_global">
        <argument
            android:name="country"
            app:argType="dev.jeffnyauke.covid19stats.model.Country" />
    </fragment>

    <fragment
        android:id="@+id/navigation_country"
        android:name="dev.jeffnyauke.covid19stats.ui.countries.CountryFragment"
        android:label="@string/title_country"
        tools:layout="@layout/fragment_country">
        <action
            android:id="@+id/action_CountryFragment_to_CountryDetailsFragment"
            app:destination="@id/navigation_country_details" />
        <action
            android:id="@+id/action_CountryFragment_to_FaqsFragment"
            app:destination="@id/navigation_faqs" />
        <action
            android:id="@+id/action_CountryFragment_to_SettingsFragment"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="dev.jeffnyauke.covid19stats.ui.news.NewsFragment"
        android:label="@string/title_news_updates"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_NewsFragment_to_FaqsFragment"
            app:destination="@id/navigation_faqs" />
        <action
            android:id="@+id/action_NewsFragment_to_SettingsFragment"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faqs"
        android:name="dev.jeffnyauke.covid19stats.ui.faqs.FaqsFragment"
        android:label="@string/title_faqs"
        tools:layout="@layout/fragment_faqs" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.jeffnyauke.covid19stats.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>