<?xml version="1.0" encoding="utf-8"?>

<!--
  ~
  ~  Copyright (c) 2020 jeffnyauke@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_4"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/confirmedLayout"
        style="@style/LayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_red"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/deathLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTodayCases"
            style="@style/TextToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_up"
            android:drawableTint="@color/dark_red"
            android:textColor="@color/dark_red"
            tools:text="13,589" />

        <ImageView
            style="@style/ImageIcon"
            android:layout_width="82sp"
            android:layout_height="82sp"
            android:contentDescription="@string/confirmed"
            android:src="@drawable/ic_virus"
            android:tint="@color/dark_red" />

        <TextView
            android:id="@+id/textConfirmed"
            style="@style/TextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_red"
            tools:text="11,589,493" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            android:textColor="@color/dark_red" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activeLayout"
        style="@style/LayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/recoverLayout"
        app:layout_constraintTop_toBottomOf="@+id/deathLayout">

        <ImageView
            style="@style/ImageIcon"
            android:layout_width="82sp"
            android:layout_height="82sp"
            android:contentDescription="@string/active"
            android:src="@drawable/ic_patient"
            android:tint="@color/dark_blue" />

        <TextView
            android:id="@+id/textActive"
            style="@style/TextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            tools:text="1,253,255" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textColor="@color/dark_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recoverLayout"
        style="@style/LayoutStyle"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        app:layout_constraintEnd_toStartOf="@id/activeLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmedLayout">

        <ImageView
            style="@style/ImageIcon"
            android:layout_width="82sp"
            android:layout_height="82sp"
            android:contentDescription="@string/recovered"
            android:src="@drawable/ic_heart"
            android:tint="@color/dark_green" />

        <TextView
            android:id="@+id/textRecovered"
            style="@style/TextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_green"
            tools:text="259,047" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textColor="@color/dark_green" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deathLayout"
        style="@style/LayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:background="@color/light_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/confirmedLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTodayDeaths"
            style="@style/TextToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_up"
            android:drawableTint="@color/dark_yellow"
            android:textColor="@color/dark_yellow"
            tools:text="11,589,493" />

        <ImageView
            style="@style/ImageIcon"
            android:layout_width="82sp"
            android:layout_height="82sp"
            android:contentDescription="@string/deaths"
            android:src="@drawable/ic_death"
            android:tint="@color/dark_yellow" />

        <TextView
            android:id="@+id/textDeceased"
            style="@style/TextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_yellow"
            tools:text="77,191" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textColor="@color/dark_yellow" />
    </LinearLayout>

    <TextView
        android:id="@+id/textLastUpdatedView"
        style="@style/TextLastUpdatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverLayout"
        tools:text="Last Updated: 1 minutes ago" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_4"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_unit_banner_total_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLastUpdatedView"></com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>
